Retrieving the amount of soo trades made by a player

--- a/src/main/webapp/resources/js/views/Home.html
+++ b/src/main/webapp/resources/js/views/Home.html
@@ -144,9 +144,9 @@
                         </a>
                     </div>
 
-                    <div class="well-block">
-                        <h4 class="well-title">NO. OF SOLO TRADES</h4>
-                        <p class="well-text">HOW MUCH DID YOU PLAY THE MARKETS</p>
+                    <div align = "center" class="well-block">
+                        <h1 class="well-title">You made {{numberOfSoloTrades}} solo trades!</h1>
+                        <!--<p class="well-text">HOW MUCH DID YOU PLAY THE MARKETS</p>-->
                         <a ng-href="#/laptopCategory" class="btn default-color"></a>
                     </div>
 
