Made sure $scope.watchForChanges method was only getting called when a user was in the 'trade' state,

--- a/src/main/webapp/resources/js/views/Home.html
+++ b/src/main/webapp/resources/js/views/Home.html
@@ -144,9 +144,9 @@
                         </a>
                     </div>
 
-                    <div align = "center" class="well-block">
-                        <h1 class="well-title">You made {{numberOfSoloTrades}} solo trades!</h1>
-                        <!--<p class="well-text">HOW MUCH DID YOU PLAY THE MARKETS</p>-->
+                    <div class="well-block">
+                        <h4 class="well-title">NO. OF SOLO TRADES</h4>
+                        <p class="well-text">HOW MUCH DID YOU PLAY THE MARKETS</p>
                         <a ng-href="#/laptopCategory" class="btn default-color"></a>
                     </div>
 
@@ -234,8 +234,8 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">NO. MATCHES</h4>
-                        <p class="well-text">how busy where you?</p>
+                        <h1 class="well-title">You played {{numberOfSoloTrades}} games!</h1>
+                        <!--<p class="well-text">how busy where you?</p>-->
                         <a ng-href="#/laptopCategory" class="btn default-color"></a>
                     </div>
 
