getting number of solo trades for each user in the summary

--- a/src/main/webapp/resources/js/views/Home.html
+++ b/src/main/webapp/resources/js/views/Home.html
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">NO. OF SOLO TRADES</h4>
+                        <h4 class="well-title">NO. OF SOLO TRADES {{numberOfSoloTrades}}</h4>
                         <p class="well-text">HOW MUCH DID YOU PLAY THE MARKETS</p>
                         <a ng-href="#/laptopCategory" class="btn default-color"></a>
                     </div>
