game trade coune

--- a/src/main/webapp/resources/js/views/Home.html
+++ b/src/main/webapp/resources/js/views/Home.html
@@ -234,7 +234,7 @@
                     </div>
 
                     <div class="well-block">
-                        <h1 class="well-title">You played {{numberOfSoloTrades}} games!</h1>
+                        <h1 class="well-title">You played {{numberOfGameTrades}} games!</h1>
                         <!--<p class="well-text">how busy where you?</p>-->
                         <a ng-href="#/laptopCategory" class="btn default-color"></a>
                     </div>
