--- a/src/main/webapp/resources/js/views/Welcome.html
+++ b/src/main/webapp/resources/js/views/Welcome.html
@@ -1,1 +1,1 @@
-<img src='../../../resources/img/FF_SPLASH.png' style='position:fixed;top:60px;left:0px;width:100%;height:100%;z-index:-1;'>
+<img src='../../../resources/img/forexgym.png' style='position:fixed;top:60px;left:0px;width:90%;height:80%;z-index:-1;margin-left: 5%;margin-right: 5%;margin-top: 3%;'>
