--- a/src/main/webapp/resources/js/views/Home.html
+++ b/src/main/webapp/resources/js/views/Home.html
@@ -76,7 +76,8 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Rank</h4>
+                        <h1 class="well-title"><h1>Current Rank: {{$root.currentUser.currentRank}}</h1>
+                        <h2 class="well-title"><h2>Best Rank: {{$root.currentUser.bestRank}}</h2>
                         <p class="well-text">Where are you compared to the other players</p>
                         <a ng-href="#/tabletCategory" class="btn default-color">All Ranks</a>
                     </div>
@@ -156,17 +157,21 @@
             <div class="col-md-6">
                 <div class="well">
 
-                    <div class="view overlay hm-white-slight">
-                        <img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">
-                        <a href="#">
-                            <div class="mask"></div>
-                        </a>
-                    </div>
+                    <!--<div class="view overlay hm-white-slight">-->
+                        <!--<img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">-->
+                        <!--<a href="#">-->
+                            <!--<div class="mask"></div>-->
+                        <!--</a>-->
+                    <!--</div>-->
 
                     <div class="well-block">
-                        <h4 class="well-title">NET PROFIT AND LOSS</h4>
-                        <p class="well-text">are you up or down?</p>
-                        <a ng-href="#/tabletCategory" class="btn default-color"></a>
+                        <h1 align="center">Profit Vs Loss at a Glance!</h1>
+                        <!--<h4 class="well-title">NET PROFIT AND LOSS</h4>-->
+                        <!--<p class="well-text">are you up or down?</p>-->
+                        <!--<a ng-href="#/tabletCategory" class="btn default-color"></a>-->
+                        <canvas id="bar" class="chart chart-bar"
+                                chart-data="soloTradeProfitLossData" chart-labels="soloTradeProfitLossLabels" chart-options="options" height="220px">
+                        </canvas>
                     </div>
 
                 </div>
