pie chart added

--- a/src/main/webapp/resources/css/navbar.scss
+++ b/src/main/webapp/resources/css/navbar.scss
@@ -50,9 +50,11 @@
 }
 
 .navbar-inverse .nav > li > a {
-  color: #000000;
+  color: #ffffff;
 }
 
 .navbar-inverse .nav > li > a:hover {
   background: #09e2e2;
 }
+
+
