--- a/src/main/webapp/resources/js/views/Home.html
+++ b/src/main/webapp/resources/js/views/Home.html
@@ -19,11 +19,13 @@
             </div>
 
             <!--Main information-->
-            <div class="col-md-5">
-                <h2 class="h2-responsive"><b>{{$root.currentUser.firstName}} {{$root.currentUser.lastName}}'s Profile Page</b></h2>
+            <div class="col-md-5" margin-top="15%">
+             <hr>
+                <h1 class="h2-responsive"><b><font color="white">{{$root.currentUser.firstName | uppercase}}'s Profile Page</font></b></h1>
+                <h2 class="h2-responsive"><b><font color="white">Name :{{$root.currentUser.firstName | uppercase}} {{$root.currentUser.lastName | uppercase}}</font></b></h2>
+                <h2 class="h2-responsive"><b><font color="white">Username : {{$root.currentUser.username | uppercase}}</font></b></h2>
+                <h2 class="h2-responsive"><b><font color="white">Email : {{$root.currentUser.email | uppercase}}</font></b></h2>
                 <hr>
-                <p>Here is a visual summary of your history in the Forex Gym </p>
-                <a hre class="btn default-color">Get back to trading!!!</a>
             </div>
         </div>
         <!--/.First row-->
@@ -132,6 +134,17 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
         <!--soloHistory View-->
 
         <div ng-show="soloHistoryViewVisible" class="row">
@@ -209,6 +222,23 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!--gameHistory View-->
 
         <div ng-show="gameHistoryViewVisible" class="row">
@@ -224,8 +254,7 @@
 
                     <div class="well-block">
                         <h1 class="well-title">Played in {{getAllChallengesUserInvolvedIn}} Games!</h1>
-
-                        <h1 class="well-title">You made {{numberOfGameTrades}} in In Game Trades!</h1>
+                        <h1 class="well-title">You made {{numberOfGameTrades}} In-Game Trades!!</h1>
                     </div>
 
                 </div>
@@ -252,17 +281,20 @@
             <div class="col-md-6">
                 <div class="well">
 
-                    <div class="view overlay hm-white-slight">
-                        <img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">
-                        <a href="#">
-                            <div class="mask"></div>
-                        </a>
-                    </div>
+                    <!--<div class="view overlay hm-white-slight">-->
+                        <!--<img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">-->
+                        <!--<a href="#">-->
+                            <!--<div class="mask"></div>-->
+                        <!--</a>-->
+                    <!--</div>-->
 
-                    <div class="well-block">
-                        <h4 class="well-title">TOTAL WINNINGS/LOSSES</h4>
-                        <p class="well-text">Can you steal the game stakes?</p>
-                    </div>
+                    <!--<div class="well-block">-->
+                        <!--<h4 class="well-title">TOTAL WINNINGS/LOSSES</h4>-->
+                        <!--<p class="well-text">Can you steal the game stakes?</p>-->
+                    <!--</div>-->
+                    <canvas id="pie" class="chart chart-pie"
+                            chart-data="number" chart-labels="result" chart-options="pieOptions" label="labels" height="248px" >
+                    </canvas>
 
                 </div>
             </div>
@@ -279,6 +311,79 @@
                         </canvas>
                     </div>
 
+                </div>
+            </div>
+        </div>
+
+
+        <div ng-show="gameHistoryViewVisible" class="row">
+            <div class="col-md-4" align="center">
+                <div class="panel-heading">
+                    <h1 align="center"><font color="white"><b>Your Winnings</b></font></h1>
+                </div>
+                <div >
+                    <table align="center">
+                        <thead>
+                        <tr>
+                            <th>Match</th>
+                            <th>Winner</th>
+                            <th>Loser</th>
+                            <th>$$Prize$$</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr ng-repeat="x in victoriesList">
+                            <td>{{x.id}}</td>
+                            <td>{{x.winner.firstName}} {{x.winner.lastName}}</td>
+                            <td>{{x.loser.firstName}} {{x.loser.lastName}}</td>
+                            <td>${{x.prize}}</td>
+                        </tr>
+                        <tr><td colspan="4">Total winnings {{totalWinnings}}</td></tr>
+
+                        </tbody>
+
+                    </table>
+                </div>
+            </div>
+
+            <div class="col-md-4" align="center">
+                <div class="panel-heading">
+                    <h3 align="center"><font color="white"><b>Game Record</b></font></h3>
+                </div>
+                <div class = "well" style="height:400px;width:400px;">
+                    <canvas id="bar" class="chart chart-bar"
+                            chart-data="number" chart-labels="result" chart-options="options" height="248px">
+                    </canvas>
+                </div>
+            </div>
+
+            <div class="col-md-4" align="center">
+                <div class="panel-heading">
+                    <h1 align="center"><font color="white"><b>Your Losses</b></font></h1>
+                </div>
+                <div >
+                    <table align="center">
+                        <thead>
+                        <tr>
+                            <th>Match</th>
+                            <th>Winner</th>
+                            <th>Loser</th>
+                            <th>$$Prize$$</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr ng-repeat="x in lossesList">
+                            <td>{{x.id}}</td>
+                            <td>{{x.winner.firstName}} {{x.winner.lastName}}</td>
+                            <td>{{x.loser.firstName}} {{x.loser.lastName}}</td>
+                            <td>${{x.prize}}</td>
+                        </tr>
+                        <tr><td colspan="4">Total losses {{totalLosses}}</td></tr>
+                        </tbody>
+
+                    </table>
                 </div>
             </div>
         </div>
