--- a/src/main/webapp/resources/js/views/AllUsers.html
+++ b/src/main/webapp/resources/js/views/AllUsers.html
@@ -49,7 +49,7 @@
                     <tr>
                         <th>Username</th>
                         <th>Rank</th>
-                        <th>Player Stats</th>
+                        <!--<th>Player Stats</th>-->
                     </tr>
                     </thead>
 
@@ -57,7 +57,7 @@
                     <tr ng-repeat="x in allUsers">
                         <td>{{x.username}}</td>
                         <td>{{x.currentRank}}</td>
-                        <td><button ng-click="getStats()" class="btn btn-success">Stats</button></td>
+                        <!--<td><button ng-click="getStats()" class="btn btn-success">Stats</button></td>-->
                     </tr>
                     </tbody>
 
