--- a/src/main/webapp/resources/js/views/Home.html
+++ b/src/main/webapp/resources/js/views/Home.html
@@ -50,8 +50,8 @@
             <div class="col-md-6">
                 <div class="well">
 
-                    <div class="view overlay hm-white-slight">
-                        <img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">
+                    <div class="view overlay hm-white-slight" align="center">
+                        <img src="../../../resources/img/dollarPNG.png" style="height:220px " style="width:620px" class="img-fluid" alt="" >
                         <a href="#">
                             <div class="mask"></div>
                         </a>
@@ -60,8 +60,12 @@
                     <div class="well-block">
                         <h4 class="well-title"></h4>
                         <h2>Average A/C Balance: ${{averageBalance.toFixed(2) | number : fractionSize}}</h2>
+                        <hr>
                         <h2>Your Balance : ${{$root.currentUser.account.balance.toFixed(2) | number : fractionSize}}</h2>
-                        <a ng-href="#/laptopCategory" class="btn default-color">View </a>
+                        <h4>{{statusDisplay}}</h4>
+                        <hr>
+                        <h3>You currently have ${{diff.toFixed(2)| number : fractionSize}} {{statusMessage}} than the average funds</h3>
+
                     </div>
 
                 </div>
@@ -70,8 +74,8 @@
             <div class="col-md-6">
                 <div class="well">
 
-                    <div class="view overlay hm-white-slight">
-                        <img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">
+                    <div class="view overlay hm-white-slight" align="center">
+                        <img src="../../../resources/img/rank.png" style="height:220px " style="width:620px" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask"></div>
                         </a>
@@ -88,27 +92,8 @@
             </div>
         </div>
 
-        <div ng-show="personalViewVisible" class="row">
-            <div class="col-md-12">
-                <div class="well">
-
-                    <div class="view overlay hm-white-slight">
-                        <img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">
-                        <a href="#">
-                            <div class="mask"></div>
-                        </a>
-                    </div>
-
-                    <div class="well-block">
-                        <h4 class="well-title">WINNINGS</h4>
-                        <p class="well-text">View your balance</p>
-                        <a  ng-href="#/laptopCategory" class="btn default-color">View </a>
-                    </div>
-
-                </div>
-            </div>
-
-            <!--<div class="col-md-6">-->
+        <!--<div ng-show="personalViewVisible" class="row">-->
+            <!--<div class="col-md-12">-->
                 <!--<div class="well">-->
 
                     <!--<div class="view overlay hm-white-slight">-->
@@ -119,14 +104,33 @@
                     <!--</div>-->
 
                     <!--<div class="well-block">-->
-                        <!--<h4 class="well-title">Rank</h4>-->
-                        <!--<p class="well-text">Overdose on our tablets</p>-->
-                        <!--<a ng-href="#/tabletCategory" class="btn default-color">Our range</a>-->
+                        <!--<h4 class="well-title">WINNINGS</h4>-->
+                        <!--<p class="well-text">View your balance</p>-->
+                        <!--<a  ng-href="#/laptopCategory" class="btn default-color">View </a>-->
                     <!--</div>-->
 
                 <!--</div>-->
             <!--</div>-->
-        </div>
+
+            <!--&lt;!&ndash;<div class="col-md-6">&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="well">&ndash;&gt;-->
+
+                    <!--&lt;!&ndash;<div class="view overlay hm-white-slight">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<a href="#">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<div class="mask"></div>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</a>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+                    <!--&lt;!&ndash;<div class="well-block">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h4 class="well-title">Rank</h4>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<p class="well-text">Overdose on our tablets</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<a ng-href="#/tabletCategory" class="btn default-color">Our range</a>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--</div>-->
 
         <!--Personal View End-->
 
