username, password and email all checked for validation

--- a/src/main/webapp/resources/js/views/LogReg.html
+++ b/src/main/webapp/resources/js/views/LogReg.html
@@ -60,7 +60,7 @@
                         </div>
 
 
-                        <form id="register-form"  role="form" style="display: none;">
+                        <form  data-toggle="validator" role="form"  id="register-form"  style="display: none;">
 
                             <div class="card" >
 
@@ -76,38 +76,43 @@
                                         <!--Body-->
                                         <div class="md-form" >
                                             <i class="fa   fa-user prefix"></i>
-                                            <input type="text" ng-model="register.firstName" name="firstName"  tabindex="1" class="form-control" placeholder=" First Name">
+                                            <input type="text" ng-model="register.firstName" name="firstName"  tabindex="1" class="form-control" placeholder=" First Name" required>
                                         </div>
+
                                         <div class="md-form" >
                                             <i class="fa   fa-user prefix"></i>
-                                            <input type="text" ng-model="register.lastName" name="lastName"  tabindex="1" class="form-control" placeholder=" Last Name">
+                                            <input type="text" ng-model="register.lastName" name="lastName"  tabindex="1" class="form-control" placeholder=" Last Name" required>
                                         </div>
 
                                         <div class="md-form" >
                                             <i class="fa  fa-money prefix"></i>
-                                            <input type="text" ng-model="register.username" name="username"  tabindex="1" class="form-control" placeholder=" Username">
+                                            <input type="text" ng-model="register.username" name="username"  tabindex="1" class="form-control" placeholder=" Username" required>
                                         </div>
+
                                         <div class="md-form" >
                                             <i class="fa fa-envelope prefix"></i>
-                                            <input type="text" ng-model="register.email" name="email"  tabindex="1" class="form-control" placeholder=" Email">
+                                            <input type="email" ng-model="register.email" name="email"  tabindex="1" class="form-control" placeholder=" Email" required>
+                                        </div>
+
+
+                                        <div class="md-form">
+                                            <i class="fa fa-lock prefix"></i>
+                                            <input type="password" data-minlength="6"  class="form-control" id="inputPassword"     placeholder=" Password (min 6 characters)" ng-model="register.password"  required>
                                         </div>
 
                                         <div class="md-form">
                                             <i class="fa fa-lock prefix"></i>
-                                            <input type="password" ng-model="register.password" name="password"  tabindex="1" class="form-control" placeholder=" Password">
+                                            <input type="password" data-minlength="6" class="form-control"  id="inputPasswordConfirm" data-match="#inputPassword"   data-match-error="Whoops, don't match" ng-model="register.confirmPassword"  placeholder=" Confirm Password"required>
                                         </div>
 
-                                        <div class="md-form">
-                                            <i class="fa fa-lock prefix"></i>
-                                            <input type="password" ng-model="register.confirmPassword" name="confirmPassword"  tabindex="1" class="form-control" placeholder=" Confirm Password">
-                                        </div>
+
 
                                         <!--<fieldset class="form-group">-->
                                             <!--<input type="checkbox" ng-model="register.subscription" id="checkbox1">-->
                                             <!--<label for="checkbox1">Subscribe me to the newsletter (recieve a 5% discount on all purchases!!)</label>-->
                                         <!--</fieldset>-->
 
-                                        <div class="text-center">
+                                        <div class="form-group">
                                             <button ng-click="submitRegistration()" class="btn yellow darken-4">Register</button>
                                         </div>
 
