challenge valid timer reading directly from the database so both users can see it

--- a/src/main/webapp/resources/js/views/Online.html
+++ b/src/main/webapp/resources/js/views/Online.html
@@ -1,6 +1,6 @@
 <div ng-show='$root.iAmLive' class="panel-heading">
     <h4 align="center"><b>Your Challenge Has Been Sent</b></h4>
-    <h4 align="center"><b>Opponent Has {{$root.challengeValidTime | toMinSec}} remaining to accept</b></h4>
+    <h4 align="center"><b>Opponent Has {{challengeValidTime | toMinSec}} remaining to accept</b></h4>
 </div>
 
 <table align="center">
