--- a/src/main/webapp/resources/js/views/OpenChallenges.html
+++ b/src/main/webapp/resources/js/views/OpenChallenges.html
@@ -55,7 +55,7 @@
         </div>
 
         <div ng-show='liveIncoming' class="panel-heading">
-            <h1 align="center"><b>You have {{$root.challengeValidTime | toMinSec}} remaining to accept</b></h1>
+            <h1 align="center"><b>You have {{challengeValidTime | toMinSec}} remaining to accept</b></h1>
         </div>
 
         <div class="col-md-12">
