game working now, wrong win

--- a/src/main/webapp/resources/js/views/Online.html
+++ b/src/main/webapp/resources/js/views/Online.html
@@ -8,7 +8,7 @@
     <tr>
         <th>Username</th>
         <th>Ranking</th>
-        <th>Duration</th>
+        <th>Duration (Min's)</th>
         <th>Stake</th>
         <th>Challenge</th>
 
