--- a/src/main/webapp/resources/js/views/WhatIsForex.html
+++ b/src/main/webapp/resources/js/views/WhatIsForex.html
@@ -1,1 +1,207 @@
-yoyo
+
+
+<main>
+
+    <div class="container">
+        <!--First row-->
+        <div class="row">
+            <div class="col-md-7">
+                <!--Featured image -->
+                <div class="view overlay hm-white-light z-depth-1-half">
+                    <img src="../../../resources/img/whatIsForex.jpg" class="img-fluid " alt="">
+                    <div class="mask">
+                    </div>
+                </div>
+                <br>
+            </div>
+
+            <!--Main information-->
+            <div class="col-md-5" margin-top="15%">
+                <hr>
+                <h1 class="h2-responsive" align="center"><b><u>FUNDAMENTALS</u></b></h1>
+                <h1 class="h2-responsive" align="center">Terminology</h1>
+                <h2 class="h2-responsive" align="center">How to profit from the market</h2>
+                <h1 class="h2-responsive" align="center">How Profit and Loss are calculated</h1>
+
+                <hr>
+            </div>
+        </div>
+        <!--/.First row-->
+
+
+
+
+
+
+        <hr class="extra-margins"/>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="view overlay hm-white-slight" align="center">
+                        <img src="../../../resources/img/anatomyOfPair.png" style="height:520px " style="width:620px" class="img-fluid" alt="" >
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center">The Currency Pair</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Like the one on the left</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Is the cornerstone of the FOREX Market</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr class="extra-margins"/>
+
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center">Pip is 1/1000th of one unit</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">In the Base Currency (one on the left)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Which is the one being</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Bought or Sold</h1></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="view overlay hm-white-slight" align="center">
+                        <img src="../../../resources/img/pip.png" style="height:520px " style="width:620px" class="img-fluid" alt="" >
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+        <hr class="extra-margins"/>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="view overlay hm-white-slight" align="center">
+                        <img src="../../../resources/img/leverage.png" style="height:520px " style="width:620px" class="img-fluid" alt="" >
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center">Relatively Small Accounts</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Can Reap Massive Gains</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Or Incur Severe Losses</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Those Pip's add up</h1></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <hr class="extra-margins"/>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center"><b><u>How it's calculated</u></b></h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">If you are confident the Euro Will Rise</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">In relation to the USD (EUR/USD)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">And want to open a position</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">For 10,000 (BUY 10,000 Euro's)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">In the hope they will rise</h1></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center"><b>At the curreny rate</b></h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">This would cost you</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">US$10,927.90 </h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Which is (10,000 * 1.09279)current ASK</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">But With Leverage at 200:1?</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Would cost you only $54.63 </h1></li>
+                            <li> <h1 class="well-title"><h1 align="center"></h1></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <hr class="extra-margins"/>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center"><b><u>What this means to you?</u></b></h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">The EUR/USD BID when you opened the position was 1.09268</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">So if you sold the EUR you bought Straight away</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">They would be valued at $10,926.80</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Which means you instantly lost $1.10</h1></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h2 align="center">Although of course you are not going to close straight away</h2></li>
+                            <li> <h1 class="well-title"><h2 align="center">So you wait for a rise</h2></li>
+                            <li> <h1 class="well-title"><h2 align="center">Let's say the ask price moves </h2></li>
+                            <li> <h1 class="well-title"><h2 align="center">The ASK is now 1.09287</h2></li>
+                            <li> <h1 class="well-title"><h2 align="center">The difference between 1.09628 and 1.09465 seems small right?</h2></li>
+                            <li> <h1 class="well-title"><h2 align="center">But you just made a $19.70 profit</h2></li>
+                            <li> <h1 class="well-title"><h2 align="center">Not bad for initial stake of $54.63</h2></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>  <!--/end contrainer-->
+
+    <!--/.Main layout-->
+
+</main>
+
+
+
+
