--- a/src/main/webapp/resources/js/views/WhatIsForex.html
+++ b/src/main/webapp/resources/js/views/WhatIsForex.html
@@ -54,7 +54,6 @@
                             <li> <h1 class="well-title"><h1 align="center">Like the one on the left</h1></li>
                             <li> <h1 class="well-title"><h1 align="center">§</h1></li>
                             <li> <h1 class="well-title"><h1 align="center">Is the cornerstone of the FOREX Market</h1></li>
-                            <li> <h1 class="well-title"><h1 align="center">§</h1></li>
                         </ul>
                     </div>
                 </div>
@@ -152,7 +151,6 @@
                             <li> <h1 class="well-title"><h1 align="center">Which is (10,000 * 1.09279)current ASK</h1></li>
                             <li> <h1 class="well-title"><h1 align="center">But With Leverage at 200:1?</h1></li>
                             <li> <h1 class="well-title"><h1 align="center">Would cost you only $54.63 </h1></li>
-                            <li> <h1 class="well-title"><h1 align="center"></h1></li>
                         </ul>
                     </div>
                 </div>
@@ -194,6 +192,104 @@
         </div>
 
 
+
+        <hr class="extra-margins"/>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center"><b><u>Long Position (BUY)</u></b></h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Optimistic about base currency(Left) future value relative to counter currency(Right)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Pip difference</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">current bid(what you can sell for now) - initial ask (what you paid)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">* position size</h1></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center"><b><u>Short Position (SELL)</u></b></h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Pessimistic about base currency(Left) future value relative to counter currency(Right)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Pip difference</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">current ask(what you sold for) - initial ask (what you can buy back for)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">* position size</h1></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+
+        <hr class="extra-margins"/>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center"><b><u>Direct Quote ("###/USD")</u></b></h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Long (BUY)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Long PIP Difference * Position Size</h1></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center"><b><u>Direct Quote ("###/USD")</u></b></h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Short (SELL)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Short PIP Difference * Position Size</h1></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <hr class="extra-margins"/>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center"><b><u>InDirect Quote ("USD/###")</u></b></h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Long (BUY)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Long PIP Difference * Position Size / current ASK</h1></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="well">
+                    <div class="well-block">
+                        <ul>
+                            <li> <h1 class="well-title"><h1 align="center"><b><u>InDirect Quote ("USD/###")</u></b></h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Short (SELL)</h1></li>
+                            <li> <h1 class="well-title"><h1 align="center">Short PIP Difference * Position Size / current ASK</h1></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
 
 
     </div>  <!--/end contrainer-->
